fix(M7): 第1轮AI审查修复（PrcExporter并发/安全/逻辑 + DebugLogger句柄/缓冲 + MethodProfiler竞态）