@@ -5,15 +5,16 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.CopyOnWriteArrayList;
 
 /**
  * 调试日志器：调试模式开关、模组行为日志（操作/事件流）、线程创建/销毁追踪、日志文件导出。
@@ -26,15 +27,22 @@ public final class DebugLogger {
 
 	/** 内存日志环形缓冲上限，防止无限增长。 */
 	private static final int MAX_BUFFERED = 500;
+	/** 每累计多少条日志 flush 一次（降低系统调用/磁盘同步压力）。 */
+	private static final int FLUSH_THRESHOLD = 50;
 
 	private static final DateTimeFormatter TS = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss.SSS");
 
-	private final List<String> buffered = new CopyOnWriteArrayList<>();
+	private final Object bufferLock = new Object();
+	private final Object writeLock = new Object();
+	private final Object threadDiffLock = new Object();
+
+	/** 环形缓冲：锁保护，O(1) 添加/删除。 */
+	private final ArrayDeque<String> buffered = new ArrayDeque<>(MAX_BUFFERED);
 
 	private volatile boolean debugEnabled = false;
 	private volatile Path logFile;
 	private volatile BufferedWriter writer;
-	private final Object writeLock = new Object();
+	private int pendingLines = 0;
 
 	/** 上一次线程集合（用于追踪线程创建/销毁）。 */
 	private final Set<Long> lastThreadIds = new HashSet<>();
@@ -59,10 +67,13 @@ public final class DebugLogger {
 			Path dir = PrcExporter.defaultDirectory();
 			Path file = dir.resolve(PrcExporter.timestampedName("日志", ".log"));
 			BufferedWriter w = Files.newBufferedWriter(file, StandardCharsets.UTF_8,
-				java.nio.file.StandardOpenOption.CREATE, java.nio.file.StandardOpenOption.APPEND);
-			logFile = file;
-			writer = w;
-			debugEnabled = true;
+				StandardOpenOption.CREATE, StandardOpenOption.APPEND);
+			synchronized (writeLock) {
+				logFile = file;
+				writer = w;
+				pendingLines = 0;
+				debugEnabled = true;
+			}
 			record("调试模式已开启，日志文件: " + file.getFileName());
 			return true;
 		} catch (IOException e) {
@@ -70,25 +81,32 @@ public final class DebugLogger {
 		}
 	}
 
-	/** 关闭调试模式：刷新并关闭日志文件。 */
+	/** 关闭调试模式：先记录关闭消息，再关闭 writer，并清空线程基线。 */
 	public synchronized boolean disable() {
 		if (!debugEnabled) {
 			return false;
 		}
-		debugEnabled = false;
 		record("调试模式已关闭");
+
+		boolean ok = true;
 		synchronized (writeLock) {
-			if (writer != null) {
+			debugEnabled = false;
+			BufferedWriter w = writer;
+			writer = null;
+			pendingLines = 0;
+			if (w != null) {
 				try {
-					writer.flush();
-					writer.close();
-				} catch (IOException ignored) {
+					w.close();
+				} catch (IOException e) {
+					ok = false;
 				}
-				writer = null;
 			}
+			logFile = null;
 		}
-		logFile = null;
-		return true;
+		synchronized (threadDiffLock) {
+			lastThreadIds.clear();
+		}
+		return ok;
 	}
 
 	public Path logFile() {
@@ -101,17 +119,36 @@ public final class DebugLogger {
 			return;
 		}
 		String line = "[" + LocalDateTime.now().format(TS) + "] " + message;
-		buffered.add(line);
-		if (buffered.size() > MAX_BUFFERED) {
-			buffered.remove(0);
+
+		synchronized (bufferLock) {
+			if (buffered.size() == MAX_BUFFERED) {
+				buffered.removeFirst();
+			}
+			buffered.addLast(line);
 		}
+
+		boolean shouldFlush = false;
 		synchronized (writeLock) {
-			if (writer != null) {
+			BufferedWriter w = writer;
+			if (w == null) {
+				return;
+			}
+			try {
+				w.write(line);
+				w.newLine();
+				pendingLines++;
+				if (pendingLines >= FLUSH_THRESHOLD) {
+					w.flush();
+					pendingLines = 0;
+				}
+			} catch (IOException e) {
+				// 写入失败：摘除并关闭损坏的 writer，关闭调试模式，避免持续无效写入
+				writer = null;
+				debugEnabled = false;
 				try {
-					writer.write(line);
-					writer.newLine();
-					writer.flush();
-				} catch (IOException ignored) {
+					w.close();
+				} catch (IOException closeError) {
+					e.addSuppressed(closeError);
 				}
 			}
 		}
@@ -122,41 +159,49 @@ public final class DebugLogger {
 		record("操作 [" + action + "] 操作者=" + operator + " 目标=" + target + " 结果=" + result);
 	}
 
-	/**
-	 * 追踪线程创建/销毁：对比当前 JVM 线程集合与上次，记录差异事件。
-	 * 由采样线程在调试模式下调用，复用其已获取的线程集合。
-	 */
+	/** 追踪线程创建/销毁：对比当前 JVM 线程集合与上次，记录差异事件。由采样线程在调试模式下调用。 */
 	public void trackThreadDiff(Set<Thread> threads) {
-		if (!debugEnabled) {
+		if (!debugEnabled || threads == null) {
 			return;
 		}
 		Map<Long, Thread> current = new HashMap<>();
 		for (Thread t : threads) {
-			current.put(t.threadId(), t);
-		}
-		// 新增线程
-		for (Map.Entry<Long, Thread> e : current.entrySet()) {
-			if (!lastThreadIds.contains(e.getKey())) {
-				record("线程创建: [" + e.getValue().getName() + "] id=" + e.getKey());
+			if (t != null) {
+				current.put(t.threadId(), t);
 			}
 		}
-		// 销毁线程
-		for (long id : lastThreadIds) {
-			if (!current.containsKey(id)) {
-				record("线程销毁: id=" + id);
+
+		List<String> events = new ArrayList<>();
+		synchronized (threadDiffLock) {
+			for (Map.Entry<Long, Thread> e : current.entrySet()) {
+				if (!lastThreadIds.contains(e.getKey())) {
+					events.add("线程创建: [" + e.getValue().getName() + "] id=" + e.getKey());
+				}
 			}
+			for (long id : lastThreadIds) {
+				if (!current.containsKey(id)) {
+					events.add("线程销毁: id=" + id);
+				}
+			}
+			lastThreadIds.clear();
+			lastThreadIds.addAll(current.keySet());
 		}
-		lastThreadIds.clear();
-		lastThreadIds.addAll(current.keySet());
+		for (String event : events) {
+			record(event);
+		}
 	}
 
 	/** 最近缓冲的调试日志（供 UI 展示）。 */
 	public List<String> buffered() {
-		return new ArrayList<>(buffered);
+		synchronized (bufferLock) {
+			return new ArrayList<>(buffered);
+		}
 	}
 
 	/** 清空内存缓冲（不关闭文件）。 */
 	public void clearBuffered() {
-		buffered.clear();
+		synchronized (bufferLock) {
+			buffered.clear();
+		}
 	}
 }
